--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "watchify src/app.js -o public/bundle.js -t [ babelify --presets [ react es2015 ] ]",
+    "build": "watchify src/app.js -o public/bundle.js -t [ babelify --presets [ react es2015 stage-3 ] ]",
     "server": "cd public && live-server --port=3000 --entry-file=index.html"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
     "babelify": "^7.3.0",
     "live-server": "^1.1.0",
     "watchify": "^3.8.0"
