--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "live-server": "^1.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "watchify": "^3.8.0"
   }
