--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^1.0.0",
     "watchify": "^3.8.0"
   }
 }
