--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "babelify": "^7.3.0",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "live-server": "^1.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -23,6 +25,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
+    "redux-thunk": "^2.1.0",
     "watchify": "^3.8.0"
   }
 }
